src/objects/Serial_Number__c/Serial_Number__c.object-meta.xml
<CustomObject>
    <description>This is the serial numbers for an RMA request which will be populated from Oracle</description>
    <label>Serial Number</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serial Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>