src/objects/Serial_Number__c/fields/Actual_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ship_Date__c</fullName>
    <formula>Order_Line__r.Actual_Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Ship Date</label>
    <type>Date</type>
</CustomField>