src/objects/Serial_Number__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <formula>If(Aging_Days__c &gt; 20 &amp;&amp; (ISPICKVAL(Status__c, &apos;FA Review&apos;) || ISPICKVAL(Status__c, &apos;2nd FA&apos;)), IMAGE(&apos;/resource/1535629670000/red&apos;,&apos;red&apos;,25,50), If(Aging_Days__c &gt; 10 &amp;&amp; ISPICKVAL(Status__c, &apos;FV Review&apos;) || ISPICKVAL(Status__c, &apos;FV/FA Queue&apos;), IMAGE(&apos;/resource/1547096280000/orange&apos;,&apos;orange&apos;,25,50),IMAGE(&apos;/resource/1535629399000/green&apos;,&apos;green&apos;,25,50)))</formula>
    <label>Aging</label>
    <type>Text</type>
</CustomField>