src/objects/Serial_Number__c/fields/Bill_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Location__c</fullName>
    <formula>Order_Line__r.Bill_To_Street__c +  TEXT(Order_Line__r.Bill_To_Number__c) +  Order_Line__r.Bill_To_City__c +  Order_Line__r.Bill_To_State__c +  Order_Line__r.Bill_to_Country__c +  Order_Line__r.Bill_To_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Location</label>
    <type>Text</type>
</CustomField>