src/objects/Serial_Number__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <formula>TEXT(Order_Line__r.Part_Number__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>