src/objects/Serial_Number__c/fields/Component_Description__c.field-meta.xml
<CustomField>
    <fullName>Component_Description__c</fullName>
    <label>Component Description</label>
    <type>TextArea</type>
</CustomField>