src/objects/Serial_Number__c/fields/Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Conclusion__c</fullName>
    <label>Conclusion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>