src/objects/Serial_Number__c/fields/Count_of_Completed_FV_Details__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Completed_FV_Details__c</fullName>
    <label>Count of Completed FV Details</label>
    <summaryFilterItems>
        <field>FA_FV_Detail__c.FA_FV_Type_Col__c</field>
        <operation>equals</operation>
        <value>FV Analysis</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FA_FV_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>FA_FV_Detail__c.Serial_Number__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>