src/objects/Serial_Number__c/fields/Count_of_FA_FV_Detail__c.field-meta.xml
<CustomField>
    <fullName>Count_of_FA_FV_Detail__c</fullName>
    <label>Count of FV/FA Detail</label>
    <summaryForeignKey>FA_FV_Detail__c.Serial_Number__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>