src/objects/Serial_Number__c/fields/Current_User_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Owner__c</fullName>
    <formula>if($User.Id =   Order_Line__r.OwnerId ,TRUE,FALSE)</formula>
    <label>Current User is Owner</label>
    <type>Checkbox</type>
</CustomField>