src/objects/Serial_Number__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <formula>Order_Line__r.Cust_Po_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer PO</label>
    <type>Text</type>
</CustomField>