src/objects/Serial_Number__c/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <label>Customer Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>