src/objects/Serial_Number__c/fields/Customer_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Serial_Number__c</fullName>
    <label>Customer Serial Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>