src/objects/Serial_Number__c/fields/Cuurent_Org__c.field-meta.xml
<CustomField>
    <fullName>Cuurent_Org__c</fullName>
    <formula>Order_Line__r.Order__r.Organization_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Org</label>
    <type>Text</type>
</CustomField>