src/objects/Serial_Number__c/fields/Defect_Type__c.field-meta.xml
<CustomField>
    <fullName>Defect_Type__c</fullName>
    <description>Defect type at RMA Line Level form Oracle</description>
    <formula>Order_Line__r.Defect_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Type</label>
    <type>Text</type>
</CustomField>