src/objects/Serial_Number__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <inlineHelpText>Please select the disposition for this serial number</inlineHelpText>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>N/A - OOW</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Retained</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Return - NTF</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
            <value>
                <fullName>FA / FV</fullName>
                <isActive>false</isActive>
                <label>FA / FV</label>
            </value>
            <value>
                <fullName>Loaner Return Record</fullName>
                <isActive>false</isActive>
                <label>Loaner Return Record</label>
            </value>
            <value>
                <fullName>Return to Stock</fullName>
                <isActive>false</isActive>
                <label>Return to Stock</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>