src/objects/Serial_Number__c/fields/Disposition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Notes__c</fullName>
    <label>Disposition Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>