src/objects/Serial_Number__c/fields/End_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Name__c</fullName>
    <formula>Order_Line__r.End_Customer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Name</label>
    <type>Text</type>
</CustomField>