src/objects/Serial_Number__c/fields/FA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>FA_Completion_Date__c</fullName>
    <formula>If( Count_of_Completed_FA_Details__c = Count_of_FA_Details__c &amp;&amp;  Count_of_FA_Details__c &gt;0,  Max_FA_Completion_Date__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA Completion Date</label>
    <type>Date</type>
</CustomField>