src/objects/Serial_Number__c/fields/FA_FV_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>FA_FV_Completion_Date__c</fullName>
    <label>FV/FA Completion Date</label>
    <summarizedField>FA_FV_Detail__c.FA_Completion_Date__c</summarizedField>
    <summaryForeignKey>FA_FV_Detail__c.Serial_Number__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>