src/objects/Serial_Number__c/fields/FAFV_Status__c.field-meta.xml
<CustomField>
    <fullName>FAFV_Status__c</fullName>
    <description>If(Count_of_Completed_FA_FV_Details__c =  Count_of_FA_FV_Detail__c , &apos;Completed&apos;, &apos;Open&apos;)</description>
    <formula>CASE(Count_of_FA_FV_Detail__c , 
0, &quot;Open&quot;,
Count_of_Completed_FA_FV_Details__c , &quot;Completed&quot;, 
 &quot;Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO NOT USE - FV/FA Status</label>
    <type>Text</type>
</CustomField>