src/objects/Serial_Number__c/fields/Form_Factor__c.field-meta.xml
<CustomField>
    <fullName>Form_Factor__c</fullName>
    <description>Created for CR 43</description>
    <formula>TEXT(Order_Line__r.Part_Number__r.Form_Factor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Factor</label>
    <type>Text</type>
</CustomField>