src/objects/Serial_Number__c/fields/FV_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>FV_Completion_Date__c</fullName>
    <formula>If(Count_of_FV_Details__c  =  Count_of_Completed_FV_Details__c &amp;&amp;  Count_of_FV_Details__c &gt; 0 ,  Max_FV_Completion_Date__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FV Completion Date</label>
    <type>Date</type>
</CustomField>