src/objects/Serial_Number__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <formula>Order_Line__r.Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item</label>
    <type>Text</type>
</CustomField>