src/objects/Serial_Number__c/fields/Legacy_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Line_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Line Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>