src/objects/Serial_Number__c/fields/Legacy_Line_Id_UAT__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Line_Id_UAT__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Line Id UAT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>