src/objects/Serial_Number__c/fields/Marketing_Family__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Family__c</fullName>
    <formula>Order_Line__r.Part_Number__r.Marketing_Family__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Family</label>
    <type>Text</type>
</CustomField>