src/objects/Serial_Number__c/fields/Max_FV_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_FV_Completion_Date__c</fullName>
    <label>Max FV Completion Date</label>
    <summarizedField>FA_FV_Detail__c.FA_Completion_Date__c</summarizedField>
    <summaryFilterItems>
        <field>FA_FV_Detail__c.FA_FV_Type_Col__c</field>
        <operation>equals</operation>
        <value>FV Analysis</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FA_FV_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>FA_FV_Detail__c.Serial_Number__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>