src/objects/Serial_Number__c/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <inlineHelpText>This is the RMA order line to which this serial number is related</inlineHelpText>
    <label>Order Line</label>
    <referenceTo>Order_Line__c</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Serial_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>