src/objects/Serial_Number__c/fields/Original_Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Original_Customer_PO__c</fullName>
    <label>Original Customer PO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>