src/objects/Serial_Number__c/fields/Original_Ship_from_Location__c.field-meta.xml
<CustomField>
    <fullName>Original_Ship_from_Location__c</fullName>
    <label>Original Ship from Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>