src/objects/Serial_Number__c/fields/Original_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Shipment_Date__c</fullName>
    <label>Original Shipment Date</label>
    <type>Date</type>
</CustomField>