src/objects/Serial_Number__c/fields/Original_Shipment_SO__c.field-meta.xml
<CustomField>
    <fullName>Original_Shipment_SO__c</fullName>
    <label>Original Shipment SO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>