src/objects/Serial_Number__c/fields/Original_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Shipped_Date__c</fullName>
    <label>Original Shipped Date</label>
    <type>Date</type>
</CustomField>