src/objects/Serial_Number__c/fields/Outbound_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Line_Value__c</fullName>
    <label>Outbound Line Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>