src/objects/Serial_Number__c/fields/Outbound_Order__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Order__c</fullName>
    <description>If there is No Trouble Found (NTF), or a successful rework, an outbound RMA will need to be created in Oracle and tied to the original RMA order for traceability purposes at the line item level - Oracle will provide the link between the outbound RMA and the original RMA</description>
    <label>Outbound Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>