src/objects/Serial_Number__c/fields/Outbound_Shipment_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Shipment_Carrier__c</fullName>
    <label>Outbound Shipment Carrier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>