src/objects/Serial_Number__c/fields/Outbound_Shipment_Waybill__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Shipment_Waybill__c</fullName>
    <formula>Order_Line__r.Waybill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outbound Shipment Waybill</label>
    <type>Text</type>
</CustomField>