src/objects/Serial_Number__c/fields/Outbound_SO_Number__c.field-meta.xml
<CustomField>
    <fullName>Outbound_SO_Number__c</fullName>
    <label>Outbound SO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>