src/objects/Serial_Number__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>