src/objects/Serial_Number__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <label>RMA Received Date</label>
    <type>Date</type>
</CustomField>