src/objects/Serial_Number__c/fields/Repair_Status__c.field-meta.xml
<CustomField>
    <fullName>Repair_Status__c</fullName>
    <label>Repair Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>