src/objects/Serial_Number__c/fields/Return_Value__c.field-meta.xml
<CustomField>
    <fullName>Return_Value__c</fullName>
    <label>Return Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>