src/objects/Serial_Number__c/fields/RMA_Camstar_Disposition__c.field-meta.xml
<CustomField>
    <fullName>RMA_Camstar_Disposition__c</fullName>
    <label>RMA Camstar Disposition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>