src/objects/Serial_Number__c/fields/RMA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Completion_Date__c</fullName>
    <formula>If(Count_of_Completed_FA_FV_Details__c =  Count_of_FA_FV_Detail__c ,  FA_FV_Completion_Date__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Completion Date</label>
    <type>Date</type>
</CustomField>