src/objects/Serial_Number__c/fields/RMA_Completion_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>RMA_Completion_Date_Text__c</fullName>
    <label>RMA Completion Date</label>
    <type>Date</type>
</CustomField>