src/objects/Serial_Number__c/fields/RMA_Financial_Disposition__c.field-meta.xml
<CustomField>
    <fullName>RMA_Financial_Disposition__c</fullName>
    <label>RMA Financial Disposition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>