src/objects/Serial_Number__c/fields/RMA_Id__c.field-meta.xml
<CustomField>
    <fullName>RMA_Id__c</fullName>
    <label>RMA Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>