src/objects/Serial_Number__c/fields/RMA_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Line_Number__c</fullName>
    <formula>Order_Line__r.Line_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Line Number</label>
    <type>Text</type>
</CustomField>