src/objects/Serial_Number__c/fields/RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Number__c</fullName>
    <formula>Order_Line__r.Order__r.PoNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Number</label>
    <type>Text</type>
</CustomField>