src/objects/Serial_Number__c/fields/RMA_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Receipt_Date__c</fullName>
    <label>RMA Receipt Date</label>
    <type>Date</type>
</CustomField>