src/objects/Serial_Number__c/fields/RMA_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Receipt_Number__c</fullName>
    <label>RMA Receipt Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>