src/objects/Serial_Number__c/fields/RMA_Receipt_Waybill__c.field-meta.xml
<CustomField>
    <fullName>RMA_Receipt_Waybill__c</fullName>
    <label>RMA Receipt Waybill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>