src/objects/Serial_Number__c/fields/RMA_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>RMA_Root_Cause__c</fullName>
    <label>RMA Root Cause</label>
    <length>100</length>
    <type>Text</type>
</CustomField>