src/objects/Serial_Number__c/fields/Scheduled_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Ship_Date__c</fullName>
    <formula>Order_Line__r.Schedule_Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Ship Date</label>
    <type>Date</type>
</CustomField>