src/objects/Serial_Number__c/fields/Secondary_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Root_Cause__c</fullName>
    <label>Secondary Root Cause</label>
    <length>100</length>
    <type>Text</type>
</CustomField>