src/objects/Serial_Number__c/fields/Shipped_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Serial_Number__c</fullName>
    <label>Shipped Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>