src/objects/Serial_Number__c/fields/SMID_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>SMID_Item_Number__c</fullName>
    <label>SMID Item Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>