src/objects/Serial_Number__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Serial Number Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Serial_Number_Status</valueSetName>
    </valueSet>
</CustomField>