src/objects/Serial_Number__c/fields/Tech_RMA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Tech_RMA_End_Date__c</fullName>
    <label>Tech RMA End Date</label>
    <type>Date</type>
</CustomField>