src/objects/Serial_Number__c/fields/Traceability_Information__c.field-meta.xml
<CustomField>
    <fullName>Traceability_Information__c</fullName>
    <label>Traceability Information</label>
    <type>TextArea</type>
</CustomField>