src/objects/Serial_Number__c/fields/Unit_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Shipped_Date__c</fullName>
    <label>Unit Shipped Date</label>
    <type>Date</type>
</CustomField>