src/objects/Serial_Number__c/fields/X2nd_FA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_FA_Completion_Date__c</fullName>
    <label>2nd FA Completion Date</label>
    <type>Date</type>
</CustomField>