src/objects/Serial_Number__c/validationRules/Change_Status_to_Closed_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Status_to_Closed_Validation</fullName>
    <active>true</active>
    <description>Change Status to Closed only when all FA/FV Details are Completed or Closed</description>
    <errorConditionFormula>ispickval(Status__c,&quot;Closed&quot;) &amp;&amp;  Count_of_Completed_FA_FV_Details__c  != Count_of_FA_FV_Detail__c &amp;&amp;  Count_of_FA_FV_Detail__c &gt;0</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Serial Number Status cannot be Closed - unless all FA/FVs are Completed.</errorMessage>
</ValidationRule>