src/objects/Serial_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Repair_Status__c</columns>
    <columns>Customer_Serial_Number__c</columns>
    <columns>Received_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>