src/objects/Serial_Number__c/listViews/All_3D_Sensing_BU_Serial_Numbers.listView-meta.xml
<ListView>
    <fullName>All_3D_Sensing_BU_Serial_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Actual_Ship_Date__c</columns>
    <columns>BU__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>Received_Date__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>Disposition__c</columns>
    <columns>Repair_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BU__c</field>
        <operation>equals</operation>
        <value>3D Sensing</value>
    </filters>
    <label>All 3D Sensing BU Serial Numbers</label>
</ListView>