src/objects/Serial_Number__c/listViews/FA_FV_Serial_Numbers.listView-meta.xml
<ListView>
    <fullName>FA_FV_Serial_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Actual_Ship_Date__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>Received_Date__c</columns>
    <columns>FAFV_Status__c</columns>
    <columns>Disposition__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Repair_Status__c</columns>
    <columns>Return_Value__c</columns>
    <columns>RMA_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Disposition__c</field>
        <operation>equals</operation>
        <value>FA / FV</value>
    </filters>
    <label>FA/FV - Serial Numbers</label>
</ListView>