src/objects/Serial_Number__c/listViews/Rework_Serial_Numbers.listView-meta.xml
<ListView>
    <fullName>Rework_Serial_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Actual_Ship_Date__c</columns>
    <columns>Received_Date__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>Disposition__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Repair_Status__c</columns>
    <columns>Return_Value__c</columns>
    <columns>End_Customer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Disposition__c</field>
        <operation>equals</operation>
        <value>Rework</value>
    </filters>
    <label>Rework - Serial Numbers</label>
</ListView>